--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
     <header>
         <!-- Gambar Pribadi -->
-        <img src="img/img1.jpg" alt="Foto Pribadi Bram Saputra Meha">
+        <img src="img1.jpg" alt="Foto Pribadi Bram Saputra Meha">
         <h1>Bram Saputra Meha</h1>
         <p> My Personal Data</p>
     </header>
@@ -208,7 +208,7 @@
     <script>
         // Array of background image URLs
         const backgroundImages = [
-            'url("img/img7.jpg")',
+            'url("img7.jpg")',
         ];
 
         // Function to set a random background image
